plugins {
	id 'java'
	id 'org.springframework.boot' version "4.0.5"
	id 'io.spring.dependency-management' version "1.1.7"
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(26)
	}
}

group = "pladonf"
version = "0.0.1-SNAPSHOT"

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'com.mysql:mysql-connector-j:8.4.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

	//keycloak
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation platform("org.keycloak:keycloak-dependencies-server-all:24.0.4")
	implementation "org.keycloak:keycloak-crypto-default"
	implementation "org.keycloak:keycloak-admin-ui"
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.3'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:6.0.3'
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()
}

bootJar {
	archiveFileName = "app.jar"
}